log
Thu 21 Mar 2024 11:24:31 PM UTC: 
 tests:  0|5
total_score: 10/70
0d509a3
Thu 21 Mar 2024 11:25:51 PM UTC: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  1|4
total_score: 10/70
496dfc9
Thu 21 Mar 2024 11:27:05 PM UTC: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:65:12: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   65 |       suma += numero;
      |            ^~
cc1: all warnings being treated as errors
Compilation failed
0e11dd3
Thu 21 Mar 2024 11:28:12 PM UTC: 
 exercises.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  2|3
total_score: 20/70
9f21d3c
